--- a/event-page.html
+++ b/event-page.html
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-3 mt-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="fan2foot.html">Accueil</a>
+              <a class="nav-link" aria-current="page" href="fan2foot.html">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="event-page.html">evenements</a>
+              <a class="nav-link active" href="event-page.html">Evenements</a>
             </li>
           </ul>
         </div>
@@ -33,15 +33,72 @@
         <img class="ball-img" src="ball-img.png" alt="" srcset="">  
       </div>
    </header>
-  <footer>
-    <h2 class="text-center">Nous contacter :</h2>
-    <ul >
-      <li><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
-      <li><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
-      <li><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+   <main>
+     <div class="container">
+       <h2 class="h2 display-2 text-center m-4">Les rendez-vous à ne pas manquer :</h2>
+       <div class="card m-2" style="width: 18rem;">
+        <img src="./pics/slider-pic (3).jpg" class="card-img-top" alt="joueur foot">
+        <div class="card-body">
+          <h5 class="card-title">Tournoi de charité</h5>
+          <p class="card-text">Nous organisons un tournoi le 25 mai au stade mary. l'âge maximal sera de 16 ans. </p>
+          <a href="#" class="btn btn-primary">En savoir plus</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 18rem;">
+        <img src="./pics/slider-pic.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Coupe du monde</h5>
+          <p class="card-text">Le 30 février nous organiserons une coupe du monde au stade louis III.</p>
+          <p class="card-text">Le début des hostilités débutera à 9h</p>
+          <a href="#" class="btn btn-primary">En savoir plus</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 18rem;">
+        <img src="./children-team.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">rencontre inter-quartiers</h5>
+          <p class="card-text">Une rencontre inter-quartier se déroulera mardi 9 decembre a proufieu.</p>
+          <p class="card-text">Elle opposera la guillere et le molland(tenants du titre). Coup d envoi prévu à 17h.</p>
+          <a href="#" class="btn btn-primary">S inscrire</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 18rem;">
+        <img src="./women-team.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Tournoi de foot féminin</h5>
+          <p class="card-text">Nous invitons les femmes à jouer sur ce tournoi 100% féminin qui aura lieu a st font.</p>
+          <p class="card-text">il aura lieu le 28 mai a partir de 12h</p>
+          <a href="#" class="btn btn-primary">Nous contacter</a>
+        </div>
+      </div>
+     </div>
+   </main>
+   <footer>
+    <h3 class="text-center">Nous contacter :</h3>
+    <ul class="footer-list">
+      <li class="lead">Président Marc Lindif : </li>
+      <li class="lead">06-00-00-00-00</li>
+      <li class="lead mb-3">Adresse Mail :lelel@gmail.fr</li>
+      <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
+      <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
+      <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
       <br>
-      <li><p>© 2022 John Doe</p></li>
     </ul>
+    <nav class="footer-nav" aria-label="...">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="fan2foot.html">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="fan2foot.html">1</a></li>
+        <li class="page-item active" aria-current="page">
+          <span class="page-link">2</span>
+        </li>
+        <li class="page-item disabled">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
+    <li class="copyright"><p class="text-center">© 2022 John Doe</p></li>
   </footer>
 </body>
 <script src="bootstrap.js"></script>
