--- a/event-page.html
+++ b/event-page.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="fan2foot.css">
-  <title>evenements association fan2foot</title>
+  <title>fan2foot</title>
+  <meta name="description" content="L'association de passionés de football de l'ain oraganise des evenements sur le theme du foot.">
 </head>
 <body>  
   <header>  
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="fan2foot.html"><img class="logo" src="logo.png" alt="logo foot"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +25,9 @@
             <li class="nav-item">
               <a class="nav-link active" href="event-page.html">Evenements</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="galerie.html">Galerie photo</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -36,7 +40,7 @@
    <main>
      <div class="container">
        <h2 class="h2 display-2 text-center m-4">Les rendez-vous à ne pas manquer :</h2>
-       <div class="card m-2" style="width: 18rem;">
+       <div class="card m-4" style="width: 18rem;">
         <img src="./pics/slider-pic (3).jpg" class="card-img-top" alt="joueur foot">
         <div class="card-body">
           <h5 class="card-title">Tournoi de charité</h5>
@@ -44,7 +48,7 @@
           <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
-      <div class="card m-2" style="width: 18rem;">
+      <div class="card m-4" style="width: 18rem;">
         <img src="./pics/slider-pic.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Coupe du monde</h5>
@@ -53,26 +57,91 @@
           <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
-      <div class="card m-2" style="width: 18rem;">
+      <div class="card m-4" style="width: 18rem;">
         <img src="./children-team.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">rencontre inter-quartiers</h5>
           <p class="card-text">Une rencontre inter-quartier se déroulera mardi 9 decembre a proufieu.</p>
           <p class="card-text">Elle opposera la guillere et le molland(tenants du titre). Coup d envoi prévu à 17h.</p>
-          <a href="#" class="btn btn-primary">S inscrire</a>
+          <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
-      <div class="card m-2" style="width: 18rem;">
+      <div class="card m-4" style="width: 18rem;">
         <img src="./women-team.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tournoi de foot féminin</h5>
           <p class="card-text">Nous invitons les femmes à jouer sur ce tournoi 100% féminin qui aura lieu a st font.</p>
           <p class="card-text">il aura lieu le 28 mai a partir de 12h</p>
-          <a href="#" class="btn btn-primary">Nous contacter</a>
+          <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
      </div>
+     <hr>
+     <div class="form-boot">
+      <h2 class="h2 display-2 text-center m-4">S'inscrire à un envenement :</h2>
+      <form class="row g-3 needs-validation m-4" novalidate>
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">Prénom</label>
+          <input type="text" class="form-control" id="validationCustom01" placeholder="john" required>
+          <div class="valid-feedback">
+            ok
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom02" class="form-label">Nom</label>
+          <input type="text" class="form-control" id="validationCustom02" placeholder="doe" required>
+          <div class="valid-feedback">
+            ok
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label">E-mail</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">@</span>
+            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+            <div class="invalid-feedback">
+              veuillez saisir une adresse mail svp !!
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustom03" class="form-label">Nom de l'evenement</label>
+          <input type="text" class="form-control" id="validationCustom03" placeholder="tournoi à 8" required>
+          <div class="invalid-feedback">
+            veuillez saisir un evenement svp !!
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom04" class="form-label">State</label>
+          <select class="form-select" id="validationCustom04" required>
+            <option selected disabled value="">Choose...</option>
+            <option>Paris</option>
+            <option>lyon</option>
+            <option>Marseille</option>
+            <option>nantes</option>
+          </select>
+          <div class="invalid-feedback">
+            veuillez saisir une ville svp !!
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+            <label class="form-check-label" for="invalidCheck">
+              Agree to terms and conditions
+            </label>
+            <div class="invalid-feedback">
+              You must agree before submitting.
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
+      </form>
+    </div>
    </main>
+   <hr>
    <footer>
     <h3 class="text-center">Nous contacter :</h3>
     <ul class="footer-list">
@@ -93,8 +162,9 @@
         <li class="page-item active" aria-current="page">
           <span class="page-link">2</span>
         </li>
-        <li class="page-item disabled">
-          <a class="page-link" href="#">Next</a>
+        <li class="page-item"><a class="page-link" href="galerie.html">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="galerie.html">Next</a>
         </li>
       </ul>
     </nav>
