--- a/fan2foot.html
+++ b/fan2foot.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="fan2foot.html"><img class="logo" src="logo.png" alt="logo foot"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link" href="event-page.html">Evenements</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="galerie.html">Galerie photo</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -37,11 +40,43 @@
   <main>
     <div class="container-sm">
       <h2 class="h2 display-2 text-center mt-2">La passion du foot</h2>
-      <p class="lead m-4">Notre association a but non lucratif a pour but de rassembler du monde autour de ce sport qui passionne les personnes de tout âge.</p>
-      <p class="lead m-4">Notre équipe est constituée de nombreux joueurs ayant éxercés ce sport dans le domaine professionnel ou a niveau semi pro durant une grande partie de carriere.</p>
-      <p class="lead m-4">Chaque évenement est encadrépar des personnes majeures et responsables capablent d assurer le bon déroulement des evenements organisés.</p>
-      <p class="lead m-4">Nous sommes heureux d avoir des locaux de qualités permettant d accueillir les joueurs.</p>
-      <p class="lead m-4">Notre classement des meilleurs buteurs de cette saison tous matchs confondus est le suivant :</p>
+        <p class="lead m-4">Notre association a but non lucratif a pour but de rassembler du monde autour de ce sport qui passionne les personnes de tout âge.</p>
+      <h2 class="h2 display-2 text-center mt-2">Notre équipe</h2>
+        <p class="lead m-4">Notre équipe est constituée de nombreux joueurs ayant éxercés ce sport dans le domaine professionnel ou a niveau semi pro durant une grande partie de carriere.</p>
+        <p class="lead m-4">Chaque évenement est encadré par des personnes majeures et responsables capablent d assurer le bon déroulement des evenements organisés.</p>
+        <hr>
+        <p class="lead m-4">Nous sommes heureux d avoir des locaux de qualités permettant d accueillir les joueurs.</p>
+        <p class="lead m-4">Notre classement des meilleurs buteurs de cette saison tous matchs confondus est le suivant :</p>
+          <table class="table table-striped table-hover">
+            <thead class="table-dark">
+              <tr>
+                <th scope="col">n°</th>
+                <th scope="col">Prenom</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Buts</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Bilbon</td>
+                <td>Sacquet</td>
+                <td>76</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacquie</td>
+                <td>Michelle</td>
+                <td>69</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">willy le borgne</td>
+                <td>56</td>
+              </tr>
+            </tbody>
+          </table>
+        <p class="lead m-4">Notre classement des meilleurs passeurs cette saison tous matchs confondus est le suivant :</p>
         <table class="table table-striped table-hover">
           <thead class="table-dark">
             <tr>
@@ -54,56 +89,26 @@
           <tbody>
             <tr>
               <th scope="row">1</th>
-              <td>Bilbon</td>
-              <td>Sacquet</td>
-              <td>76</td>
+              <td>pipin</td>
+              <td>touc</td>
+              <td>26</td>
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td>Jacquie</td>
-              <td>Michelle</td>
-              <td>69</td>
+              <td colspan="2">stephane de monaco</td>
+              <td>25</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td colspan="2">willy le borgne</td>
-              <td>56</td>
+              <td>orphée</td>
+              <td>Mireille</td>
+              <td>22</td>
             </tr>
           </tbody>
-        </table>
-      <p class="lead m-2">Notre classement des meilleurs passeurs cette saison tous matchs confondus est le suivant :</p>
-      <table class="table table-striped table-hover">
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">n°</th>
-            <th scope="col">Prenom</th>
-            <th scope="col">Nom</th>
-            <th scope="col">Buts</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>pipin</td>
-            <td>touc</td>
-            <td>26</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td colspan="2">stephane de monaco</td>
-            <td>25</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>orphée</td>
-            <td>Mireille</td>
-            <td>22</td>
-          </tr>
-        </tbody>
-      </table>     
-      <p class="lead m-4">Comme précisé précédemment nous organisons des évenements. Pour y acceder vous n avez qu à cliquer sur le bouton ci-dessous.</p> 
-      <a href="event-page.html" type="button"class="btn btn-primary" id="btn-event">Acceder aux évenements</a>
-      <p class="lead m-4">Au plaisir de pouvoir partager cette passion avec vous. Que le foot reste un plaisir et un moment de partage de bons moments.</p>
+        </table>     
+        <p class="lead m-4">Comme précisé précédemment nous organisons des évenements. Pour y acceder vous n avez qu à cliquer sur le bouton ci-dessous.</p> 
+        <a href="event-page.html" type="button"class="btn btn-primary" id="btn-event">Nos évenements</a>
+        <p class="lead m-4">Au plaisir de pouvoir partager cette passion avec vous. Que le foot reste un plaisir et un moment de partage de bons moments.</p>
     </div>
   </main>
   <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -149,6 +154,9 @@
       <li class="page-item active"><a class="page-link">1</a></li>
       <li class="page-item" aria-current="page">
         <a class="page-link" href="event-page.html">2</a>
+      </li>
+      <li class="page-item" aria-current="page">
+        <a class="page-link" href="galerie.html">3</a>
       </li>
       <li class="page-item">
         <a class="page-link" href="event-page.html">Next</a>
