cards, anim, progress bar => Projet finit

--- a/event-page.html
+++ b/event-page.html
@@ -48,6 +48,13 @@
           <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
+      <p class="lead">Un appel au don est lancé pour le tournoi de charité</p>
+      <p class="lead">Les dons seront reversés à une association pour handisport avec qui nous avons un partenariat</p>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+      </div>
+      <button type="btn" class="btn btn-primary m-4">participer</button>
+      <hr>
       <div class="card m-4" style="width: 18rem;">
         <img src="./pics/slider-pic.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -112,13 +119,13 @@
           </div>
         </div>
         <div class="col-md-3">
-          <label for="validationCustom04" class="form-label">State</label>
+          <label for="validationCustom04" class="form-label">Stade</label>
           <select class="form-select" id="validationCustom04" required>
-            <option selected disabled value="">Choose...</option>
-            <option>Paris</option>
-            <option>lyon</option>
-            <option>Marseille</option>
-            <option>nantes</option>
+            <option selected disabled value="">Choisir un stade</option>
+            <option>Stade ringis</option>
+            <option>city de merpuis</option>
+            <option>Stade ferquis</option>
+            <option>Soccer 5</option>
           </select>
           <div class="invalid-feedback">
             veuillez saisir une ville svp !!
@@ -128,15 +135,15 @@
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
             <label class="form-check-label" for="invalidCheck">
-              Agree to terms and conditions
+              Accepter les termes et conditions
             </label>
             <div class="invalid-feedback">
-              You must agree before submitting.
+              Vous devez accepter les conditions avant de valider
             </div>
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-primary" type="submit">Submit form</button>
+          <button class="btn btn-primary" type="submit">S'inscrire</button>
         </div>
       </form>
     </div>
@@ -148,9 +155,14 @@
       <li class="lead">Président Marc Lindif : </li>
       <li class="lead">06-00-00-00-00</li>
       <li class="lead mb-3">Adresse Mail :lelel@gmail.fr</li>
-      <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
-      <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
-      <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+      <li class="mt-2">
+        <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
+      <li class="mt-2">
+        <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
+      <li class="mt-2">
+        <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+      <img class="balls-img-footer-left" src="ball-img.png" alt="">
+      <img class="balls-img-footer-right" src="ball-img.png" alt="">
       <br>
     </ul>
     <nav class="footer-nav" aria-label="...">
