--- a/galerie.html
+++ b/galerie.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Accueil</a>
+            <a class="nav-link" aria-current="page" href="fan2foot.html">Accueil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="event-page.html">Evenements</a>
@@ -96,9 +96,14 @@
     <li class="lead">Président Marc Lindif : </li>
     <li class="lead">06-00-00-00-00</li>
     <li class="lead mb-3">Adresse Mail :lelel@gmail.fr</li>
-    <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
-    <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
-    <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+    <li class="mt-2">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
+    <li class="mt-2">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
+    <li class="mt-2">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+    <img class="balls-img-footer-left" src="ball-img.png" alt="">
+    <img class="balls-img-footer-right" src="ball-img.png" alt="">
     <br>
   </ul>
   <nav aria-label="...">
