--- a/fan2foot.html
+++ b/fan2foot.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="fan2foot.css">
   <title>fan2foot</title>
-  <meta name="description" content="L'association de passionés de football de l'ain oraganise des evenements sur le theme du foot.">
+  <meta name="description" content="L'association de passionés de football oraganise des evenements sur le theme du foot.">
 </head>
 <body>
   <header>  
@@ -33,7 +33,7 @@
     </div>
   </nav>
     <div class="bg-img">
-      <h1 class="text-center">Fan2foot</h1>
+      <h1 class=" h-1 text-center">Fan2foot</h1>
       <img class="ball-img" src="ball-img.png" alt="" srcset="">  
     </div>
   </header>
@@ -43,9 +43,35 @@
         <p class="lead m-4">Notre association a but non lucratif a pour but de rassembler du monde autour de ce sport qui passionne les personnes de tout âge.</p>
       <h2 class="h2 display-2 text-center mt-2">Notre équipe</h2>
         <p class="lead m-4">Notre équipe est constituée de nombreux joueurs ayant éxercés ce sport dans le domaine professionnel ou a niveau semi pro durant une grande partie de carriere.</p>
+        <img src="./galerie-pics/team.jpg" class="img-fluid" alt="...">
         <p class="lead m-4">Chaque évenement est encadré par des personnes majeures et responsables capablent d assurer le bon déroulement des evenements organisés.</p>
         <hr>
-        <p class="lead m-4">Nous sommes heureux d avoir des locaux de qualités permettant d accueillir les joueurs.</p>
+        <p class="lead m-4">Nous sommes heureux d avoir des locaux de qualités permettant d accueillir les joueurs dans les meilleures conditions.</p>
+        <div class="form-group">
+          <div class="card m-4" style="width: 18rem;">
+            <img src="./galerie-pics/galerie-pics (8).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Le bar</h5>
+              <p class="card-text">Le deuxieme endroit ou il y a le plus de vie en dehors du stade. Notre bar est un endroit névralgique de l'association</p>
+            </div>
+          </div>
+          <div class="card m-4" style="width: 18rem;">
+            <img src="./galerie-pics/galerie-pics (10).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Les vestiares mixtes</h5>
+              <p class="card-text">Nos vestiaires sont neufs. Nous prenons soin du materiel et de nos locaux. cela fait partie de nos qualités</p>
+              <p class="card-text">Nous avons à coeur d'offrir le meilleur pour nos joueurs</p>
+            </div>
+          </div>
+          <div class="card m-4" style="width: 18rem;">
+            <img src="./galerie-pics/galerie-pics (5).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Le stade</h5>
+              <p class="card-text">Notre Stade vu du ciel</p>
+              <p class="card-text">Situé 55 rue joe favre</p>
+            </div>
+          </div>
+        </div>
         <p class="lead m-4">Notre classement des meilleurs buteurs de cette saison tous matchs confondus est le suivant :</p>
           <table class="table table-striped table-hover">
             <thead class="table-dark">
@@ -65,13 +91,13 @@
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Jacquie</td>
-                <td>Michelle</td>
+                <td>perigrine</td>
+                <td>touc</td>
                 <td>69</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td colspan="2">willy le borgne</td>
+                <td colspan="2">saroumane</td>
                 <td>56</td>
               </tr>
             </tbody>
@@ -83,7 +109,7 @@
               <th scope="col">n°</th>
               <th scope="col">Prenom</th>
               <th scope="col">Nom</th>
-              <th scope="col">Buts</th>
+              <th scope="col">Passes D</th>
             </tr>
           </thead>
           <tbody>
@@ -95,13 +121,13 @@
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td colspan="2">stephane de monaco</td>
+              <td colspan="2">sauron</td>
               <td>25</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>orphée</td>
-              <td>Mireille</td>
+              <td>Sam</td>
+              <td>Ganji</td>
               <td>22</td>
             </tr>
           </tbody>
@@ -141,9 +167,14 @@
     <li class="lead">Président Marc Lindif : </li>
     <li class="lead">06-00-00-00-00</li>
     <li class="lead mb-3">Adresse Mail :lelel@gmail.fr</li>
-    <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
-    <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
-    <li class="mt-2"><a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+    <li class="mt-2">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
+    <li class="mt-2">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
+    <li class="mt-2">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+    <img class="balls-img-footer-left" src="ball-img.png" alt="">
+    <img class="balls-img-footer-right" src="ball-img.png" alt="">
     <br>
   </ul>
   <nav aria-label="...">
