--- a/galerie.html
+++ b/galerie.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap.css">
-  <link rel="stylesheet" href="fan2foot.css">
+  <link rel="stylesheet" href="style.css">
   <title>fan2foot</title>
   <meta name="description" content="L'association de passionés de football de l'ain oraganise des evenements sur le theme du foot.">
 </head>
@@ -13,14 +13,14 @@
   <header>  
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="fan2foot.html"><img class="logo" src="logo.png" alt="logo foot"></a>
+      <a class="navbar-brand" href="index.html"><img class="logo" src="logo.png" alt="logo foot"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="fan2foot.html">Accueil</a>
+            <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="event-page.html">Evenements</a>
@@ -38,51 +38,51 @@
     </div>
   </header>
   <main class="galerie-img">
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (1).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Tournoi nocturne des véterans le 9 mai</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (2).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Entrainement et exercices techniques de nos futures stars</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (11).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Notre tournoi de foot pour amputés qui a rassembler une centaine de pratiquants la semaine dernière</p>
         <p class="card-text">Bravo à eux pour leur courage</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (3).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Bravo à l'équipe de géraldine qui a su marquer 12 fois pour l'emporter face à metz hier à midleton</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (4).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Notre stade a une pelouse digne des plus grandes équipes de l'élite. </p>
         <p class="card-text">Sa qualité nous est offerte par dismotariose entreprise</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (7).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Le jeune ricky est le meilleur buteur des u9. Bravo à lui</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (9).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Notre tournoi féminin à su convaincre une vingtaine de s'investir d'avantage dans cette discipline</p>
       </div>
     </div>
-    <div class="card m-4" style="width: 20rem;">
+    <div class="card m-4 mx-auto" style="width: 20rem;">
       <img src="./galerie-pics/galerie-pics (6).jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Nous organisons aussi des city tous les mardis à partir de 19h au city stade la blanchere</p>
@@ -96,12 +96,11 @@
     <li class="lead">Président Marc Lindif : </li>
     <li class="lead">06-00-00-00-00</li>
     <li class="lead mb-3">Adresse Mail :lelel@gmail.fr</li>
-    <li class="mt-2">
-      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
-    <li class="mt-2">
-      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
-    <li class="mt-2">
-      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+    <div class="logos">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""></a>
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""></a>
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""></a>
+    </div>
     <img class="balls-img-footer-left" src="ball-img.png" alt="">
     <img class="balls-img-footer-right" src="ball-img.png" alt="">
     <br>
@@ -109,9 +108,9 @@
   <nav aria-label="...">
     <ul class="pagination justify-content-center">
       <li class="page-item">
-        <a class="page-link" href="event-page.html">Previous</a>
+        <a class="page-link" href="event-page.html">Prev.</a>
       </li>
-      <li class="page-item"><a class="page-link" href="fan2foot.html">1</a></li>
+      <li class="page-item"><a class="page-link" href="index.html">1</a></li>
       <li class="page-item" aria-current="page">
         <a class="page-link" href="event-page.html">2</a>
       </li>
