--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap.css">
-  <link rel="stylesheet" href="fan2foot.css">
+  <link rel="stylesheet" href="style.css">
   <title>fan2foot</title>
   <meta name="description" content="L'association de passionés de football oraganise des evenements sur le theme du foot.">
 </head>
@@ -13,7 +13,7 @@
   <header>  
   <nav class="navbar navbar-expand-sm navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="fan2foot.html"><img class="logo" src="logo.png" alt="logo foot"></a>
+      <a class="navbar-brand" href="#"><img class="logo" src="logo.png" alt="logo foot"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,14 +48,14 @@
         <hr>
         <p class="lead m-4">Nous sommes heureux d avoir des locaux de qualités permettant d accueillir les joueurs dans les meilleures conditions.</p>
         <div class="form-group">
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 mx-auto" style="width: 18rem;">
             <img src="./galerie-pics/galerie-pics (8).jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Le bar</h5>
               <p class="card-text">Le deuxieme endroit ou il y a le plus de vie en dehors du stade. Notre bar est un endroit névralgique de l'association</p>
             </div>
           </div>
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 mx-auto" style="width: 18rem;">
             <img src="./galerie-pics/galerie-pics (10).jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Les vestiares mixtes</h5>
@@ -63,7 +63,7 @@
               <p class="card-text">Nous avons à coeur d'offrir le meilleur pour nos joueurs</p>
             </div>
           </div>
-          <div class="card m-4" style="width: 18rem;">
+          <div class="card m-4 mx-auto" style="width: 18rem;">
             <img src="./galerie-pics/galerie-pics (5).jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Le stade</h5>
@@ -72,7 +72,7 @@
             </div>
           </div>
         </div>
-        <p class="lead m-4">Notre classement des meilleurs buteurs de cette saison tous matchs confondus est le suivant :</p>
+        <p class="lead m-4 text-center">Notre classement des meilleurs buteurs de cette saison tous matchs confondus est le suivant :</p>
           <table class="table table-striped table-hover">
             <thead class="table-dark">
               <tr>
@@ -102,7 +102,7 @@
               </tr>
             </tbody>
           </table>
-        <p class="lead m-4">Notre classement des meilleurs passeurs cette saison tous matchs confondus est le suivant :</p>
+        <p class="lead m-4 text-center">Notre classement des meilleurs passeurs cette saison tous matchs confondus est le suivant :</p>
         <table class="table table-striped table-hover">
           <thead class="table-dark">
             <tr>
@@ -167,12 +167,11 @@
     <li class="lead">Président Marc Lindif : </li>
     <li class="lead">06-00-00-00-00</li>
     <li class="lead mb-3">Adresse Mail :lelel@gmail.fr</li>
-    <li class="mt-2">
-      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""> Youtube</a></li>
-    <li class="mt-2">
-      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""> Instagram</a></li>
-    <li class="mt-2">
-      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""> Facebook</a></li>
+    <div class="logos">
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/yt.svg" alt=""></a>
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/insta.svg" alt="" srcset=""></a>
+      <a class="navbar-brand" href="#"><img class="footer-logo" src="./pics/fb.svg" alt="" srcset=""></a>
+    </div>
     <img class="balls-img-footer-left" src="ball-img.png" alt="">
     <img class="balls-img-footer-right" src="ball-img.png" alt="">
     <br>
@@ -180,7 +179,7 @@
   <nav aria-label="...">
     <ul class="pagination justify-content-center">
       <li class="page-item disabled">
-        <span class="page-link">Previous</span>
+        <span class="page-link">Prev.</span>
       </li>
       <li class="page-item active"><a class="page-link">1</a></li>
       <li class="page-item" aria-current="page">
