--- a/event-page.html
+++ b/event-page.html
@@ -11,7 +11,7 @@
 </head>
 <body>  
   <header>  
-    <nav class="navbar navbar-expand-sm navbar-light">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img class="logo" src="logo.png" alt="logo foot"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,6 @@
           <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
-
 
       <div class="card m-4 mx-auto" style="width: 18rem;">
         <img src="./children-team.jpg" class="card-img-top" alt="...">
