--- a/galerie.html
+++ b/galerie.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm navbar-light">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img class="logo" src="logo.png" alt="logo foot"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
