--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm navbar-light">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img class="logo" src="logo.png" alt="logo foot"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,13 +20,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+            <a class="nav-link active text-center" aria-current="page" href="#">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="event-page.html">Evenements</a>
+            <a class="nav-link text-center" href="event-page.html">Evenements</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="galerie.html">Galerie photo</a>
+            <a class="nav-link text-center" href="galerie.html">Galerie</a>
           </li>
         </ul>
       </div>
@@ -161,6 +161,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <hr>
 <footer>
   <h3 class="text-center">Nous contacter :</h3>
   <ul class="footer-list">
