--- a/event-page.html
+++ b/event-page.html
@@ -40,7 +40,8 @@
    <main>
      <div class="container">
        <h2 class="h2 display-2 text-center m-4 mx-auto">Les rendez-vous à ne pas manquer :</h2>
-       <div class="card m-4 mx-auto" style="width: 18rem;">
+
+       <div class="card event" style="width: 18rem;">
         <img src="./pics/slider-pic (3).jpg" class="card-img-top" alt="joueur foot">
         <div class="card-body">
           <h5 class="card-title">Tournoi de charité</h5>
@@ -48,49 +49,55 @@
           <a href="#" class="btn btn-primary">En savoir plus</a>
         </div>
       </div>
-      <p class="lead">Un appel au don est lancé pour le tournoi de charité</p>
+      <p class="lead mt-5">Un appel au don est lancé pour le tournoi de charité</p>
       <p class="lead">Les dons seront reversés à une association pour handisport avec qui nous avons un partenariat</p>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-      </div>
+
       <button type="btn" class="btn btn-primary m-4">participer</button>
 
-      <div class="gsap">
-        <img id="ballgsap" class="ball" src="ball-img.png" alt="">  
+    </div>
+
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Apppel aux dons</div>
       </div>
 
       <hr>
 
-      <div class="card m-4 mx-auto" style="width: 18rem;">
-        <img src="./pics/slider-pic.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Coupe du monde</h5>
-          <p class="card-text">Le 30 février nous organiserons une coupe du monde au stade louis III.</p>
-          <p class="card-text">Le début des hostilités débutera à 9h</p>
-          <a href="#" class="btn btn-primary">En savoir plus</a>
+      <div class="form-group">
+
+        <div class="card m-4 mx-auto" style="width: 18rem;">
+          <img src="./pics/slider-pic.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Coupe du monde</h5>
+            <p class="card-text">Le 30 février nous organiserons une coupe du monde au stade louis III.</p>
+            <p class="card-text">Le début des hostilités débutera à 9h</p>
+            <a href="#" class="btn btn-primary">En savoir plus</a>
+          </div>
         </div>
+
+        <div class="card m-4 mx-auto" style="width: 18rem;">
+          <img src="./children-team.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">rencontre inter-quartiers</h5>
+            <p class="card-text">Une rencontre inter-quartier se déroulera mardi 9 decembre a proufieu.</p>
+            <p class="card-text">Elle opposera la guillere et le molland(tenants du titre). Coup d envoi prévu à 17h.</p>
+            <a href="#" class="btn btn-primary">En savoir plus</a>
+          </div>
+        </div>
+
+        <div class="card m-4 mx-auto" style="width: 18rem;">
+          <img src="./women-team.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Tournoi de foot féminin</h5>
+            <p class="card-text">Nous invitons les femmes à jouer sur ce tournoi 100% féminin qui aura lieu a st font.</p>
+            <p class="card-text">il aura lieu le 28 mai a partir de 12h</p>
+            <a href="#" class="btn btn-primary">En savoir plus</a>
+          </div>
+        </div>
+
       </div>
 
-      <div class="card m-4 mx-auto" style="width: 18rem;">
-        <img src="./children-team.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">rencontre inter-quartiers</h5>
-          <p class="card-text">Une rencontre inter-quartier se déroulera mardi 9 decembre a proufieu.</p>
-          <p class="card-text">Elle opposera la guillere et le molland(tenants du titre). Coup d envoi prévu à 17h.</p>
-          <a href="#" class="btn btn-primary">En savoir plus</a>
-        </div>
-      </div>
-      <div class="card m-4 mx-auto" style="width: 18rem;">
-        <img src="./women-team.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Tournoi de foot féminin</h5>
-          <p class="card-text">Nous invitons les femmes à jouer sur ce tournoi 100% féminin qui aura lieu a st font.</p>
-          <p class="card-text">il aura lieu le 28 mai a partir de 12h</p>
-          <a href="#" class="btn btn-primary">En savoir plus</a>
-        </div>
-      </div>
-     </div>
      <hr>
+
      <div class="form-boot">
       <h2 class="h2 display-2 text-center m-4">S'inscrire à un envenement :</h2>
       <form class="row g-3 needs-validation m-4" novalidate>
