--- a/event-page.html
+++ b/event-page.html
@@ -50,14 +50,14 @@
         </div>
       </div>
       <p class="lead mt-5">Un appel au don est lancé pour le tournoi de charité</p>
-      <p class="lead">Les dons seront reversés à une association pour handisport avec qui nous avons un partenariat</p>
+      <p class="lead text-center">Les dons seront reversés à une association pour handisport avec qui nous avons un partenariat</p>
 
       <button type="btn" class="btn btn-primary m-4">participer</button>
 
     </div>
 
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Apppel aux dons</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">Appel aux dons</div>
       </div>
 
       <hr>
