--- a/event-page.html
+++ b/event-page.html
@@ -13,25 +13,25 @@
   <header>  
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="logo.png" alt="logo foot"></a>
+        <a class="navbar-brand" href="#"><img class="logo" src="logo.png" alt="logo foot"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-3 mt-2 mb-lg-0">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
+              <a class="nav-link text-center" href="event-page.html">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="event-page.html">Evenements</a>
+              <a class="nav-link active text-center" aria-current="page" href="#">Evenements</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="galerie.html">Galerie photo</a>
+              <a class="nav-link text-center" href="galerie.html">Galerie</a>
             </li>
           </ul>
         </div>
       </div>
-     </nav>
+    </nav>
      <div class="bg-img">
         <h1 class="text-center">Fan2foot</h1>
         <img class="ball-img" src="ball-img.png" alt="" srcset="">  
@@ -196,8 +196,5 @@
     <li class="copyright"><p class="text-center">© 2022 John Doe</p></li>
   </footer>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
-<script src="script.js"></script>
 <script src="bootstrap.js"></script>
 </html>
