--- a/galerie.html
+++ b/galerie.html
@@ -11,27 +11,27 @@
 </head>
 <body>
   <header>  
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img class="logo" src="logo.png" alt="logo foot"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="event-page.html">Evenements</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="galerie.html">Galerie photo</a>
-          </li>          
-        </ul>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="logo" src="logo.png" alt="logo foot"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-center" href="event-page.html">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-center" href="galerie.html">Evenements</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active text-center" aria-current="page" href="#">Galerie</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
     <div class="bg-img">
       <h1 class="text-center">Fan2foot</h1>
       <img class="ball-img" src="ball-img.png" alt="" srcset="">  
